--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,45 @@
-.form-container {
-  height: 50vh;
-  background-color: lightgray;
+main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  text-align: center;
 }
 
-h1 {
-  margin: 0 0 20px;
+h1,
+h2,
+section {
+    margin: 20px 0 0;
+}
+
+.game_area {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 300px;
+  width: 100%;
+  border-radius: 400px 400px 0 0;
+  background-color: lightgreen;
+}
+
+.game_area section {
+  padding-top: 4rem;
+}
+
+.barn {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  height: 250px;
+  background: url(https://www.pngall.com/wp-content/uploads/5/Red-Barn-Transparent.png) no-repeat fixed center center/cover;
+}
+
+section .circles {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 45px;
 }
